Fix contrast problem in daily/weekly button

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -79,7 +79,7 @@ a {
   border: 1px solid #28608f;
   margin-right: -1px;
   color: #fff;
-  background-color: #428bca;
+  background-color: #0F3460;
 }
 .stv-radio-button + label:first-of-type {
   border-radius: 0.7em 0 0 0.7em;
